--- a/Desktop/Automatisation/FrontEnd/APEX-main - v2/APEX-main/src/index.html
+++ b/Desktop/Automatisation/FrontEnd/APEX-main - v2/APEX-main/src/index.html
@@ -11,8 +11,15 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  
-  <app-root></app-root>
 
+  <app-root></app-root>
+  <!-- Vendor JS Files -->
+  <script src="src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <script src="src/assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="src/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Template Main JS File -->
+  <script src="src/assets/js/main.js"></script>
 </body>
+
 </html>
